# SparTECS

./: CMakeLists.txt  README.md
include/SparTECS/: Context.h  Entity.h  EventManager.h  Events.h  Group.h  Pool.h  SparTECS.h
src/: Context.tpp  Entity.cpp  EventManager.tpp  Group.tpp  Pool.tpp
